--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # Site settings
-title: Joy Blog
-SEOTitle: 周毅的博客 | Joy Blog
+title: BY Blog
+SEOTitle: 柏荧的博客 | BY Blog
 header-img: img/post-bg-desk.jpg
-email: joy060102@gmail.com
+email: qiubaiying@gmail.com
 description: "Every failure is leading towards success."
-keyword: "JOY, JOY Blog, 周毅的博客, iOS, Apple, Android, Go"
-url: "http://jooyyy.github.io"          # your host, for absolute URL
+keyword: "BY, BY Blog, 柏荧的博客, qiubaiying, 邱柏荧, iOS, Apple, iPhone"
+url: "http://qiubaiying.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/jooyyy/jooyyy.github.io.git" # you code repository
+github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
