--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Joy Blog
 SEOTitle: 周毅的博客 | Joy Blog
-header-img: img/index-bg-fixedgear.jpg
+header-img: img/index-bg-river.jpg
 email: joy060102@gmail.com
 description: "Every failure is leading towards success."
 keyword: "Joy, Joy Blog, 周毅的博客, iOS, Apple, Android, Go"
